feat(Include projects and Analytics ): Include projects and Analytics

--- a/content/projects/MyLaundryLavanderia.mdx
+++ b/content/projects/MyLaundryLavanderia.mdx
@@ -7,7 +7,7 @@ published: true
 repository: felipe2640
 ---
 
-[![](https://unkey.dev/images/landing/app.png)](https://mylaundrylavanderia.com.br)
+[![](/Mylaundry.png)](https://mylaundrylavanderia.com.br)
 
-developed the user interface following best programming practices, SEO guidelines, and implemented event tracking for Google Ads and Pixel conversions. Additionally, I created a backend that allows customers to access information about their equipment usage after filling out a form.
+Developed the user interface following best programming practices, SEO guidelines, and implemented event tracking for Google Ads and Pixel conversions. Additionally, I created a backend that allows customers to access information about their equipment usage after filling out a form.
 Technologies used: React with Next (for UI),Tailwind, Node.js (for backend).
