--- a/content/projects/PsychologistsAppointment.mdx
+++ b/content/projects/PsychologistsAppointment.mdx
@@ -10,7 +10,7 @@ published: true
 
 Front-end: Implemented accessibility best practices and Mobile First approach.
 
-[![](/formPsychologistAppoint.png.png)](https://github.com/felipe2640/Web_Psicocalendar)
+[![](/formPsychologistAppoint.png)](https://github.com/felipe2640/Web_Psicocalendar)
 
 Back-end: Communicates with the Google Agenda API to display scheduled appointments, checks for availability, notifies patients about their appointments via email, and automatically adds the appointment to the patient's and psychologist's calendars.
 Technologies:
