modified:   content/projects/PsychologistsAppointment.mdx

--- a/content/projects/PsychologistsAppointment.mdx
+++ b/content/projects/PsychologistsAppointment.mdx
@@ -2,7 +2,8 @@
 title: Psychologists' Appointment System
 description: An online platform that allows patients to easily and conveniently schedule appointments with psychologists.
 date: "2023-04-01"
-url: https://github.com/felipe2640/Web_Psicocalendar
+repository: felipe2640/Web_Psicocalendar
+url: https://web-psicocalendar.vercel.app
 published: true
 ---
 
